[gd_scene load_steps=114 format=2]

[ext_resource path="res://Scene/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://asset/title/info.png" type="Texture" id=2]
[ext_resource path="res://asset/title/podium.png" type="Texture" id=3]
[ext_resource path="res://asset/title/bg_title.png" type="Texture" id=4]
[ext_resource path="res://tema.tres" type="Theme" id=5]
[ext_resource path="res://asset/title/Play.png" type="Texture" id=6]
[ext_resource path="res://asset/title/cat/cat_hands.png" type="Texture" id=7]
[ext_resource path="res://asset/title/quit.png" type="Texture" id=8]
[ext_resource path="res://asset/title/title.png" type="Texture" id=9]
[ext_resource path="res://asset/title/info_hover.png" type="Texture" id=10]
[ext_resource path="res://asset/title/info_click.png" type="Texture" id=11]
[ext_resource path="res://asset/title/quit_click.png" type="Texture" id=12]
[ext_resource path="res://asset/title/quit_hover.png" type="Texture" id=13]
[ext_resource path="res://asset/title/play_hover.png" type="Texture" id=14]
[ext_resource path="res://asset/title/play_click.png" type="Texture" id=15]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0002.png" type="Texture" id=16]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0017.png" type="Texture" id=17]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0003.png" type="Texture" id=18]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0025.png" type="Texture" id=19]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0027.png" type="Texture" id=20]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0010.png" type="Texture" id=21]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0033.png" type="Texture" id=22]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0007.png" type="Texture" id=23]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0013.png" type="Texture" id=24]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0001.png" type="Texture" id=25]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0015.png" type="Texture" id=26]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0030.png" type="Texture" id=27]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0004.png" type="Texture" id=28]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0011.png" type="Texture" id=29]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0024.png" type="Texture" id=30]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0014.png" type="Texture" id=31]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0022.png" type="Texture" id=32]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0019.png" type="Texture" id=33]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0009.png" type="Texture" id=34]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0012.png" type="Texture" id=35]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0008.png" type="Texture" id=36]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0016.png" type="Texture" id=37]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0005.png" type="Texture" id=38]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0006.png" type="Texture" id=39]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0018.png" type="Texture" id=40]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0020.png" type="Texture" id=41]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0021.png" type="Texture" id=42]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0023.png" type="Texture" id=43]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0026.png" type="Texture" id=44]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0028.png" type="Texture" id=45]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0031.png" type="Texture" id=46]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0029.png" type="Texture" id=47]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0032.png" type="Texture" id=48]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0039.png" type="Texture" id=49]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0041.png" type="Texture" id=50]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0042.png" type="Texture" id=51]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0043.png" type="Texture" id=52]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0044.png" type="Texture" id=53]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0045.png" type="Texture" id=54]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0047.png" type="Texture" id=55]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0040.png" type="Texture" id=56]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0046.png" type="Texture" id=57]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0037.png" type="Texture" id=58]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0036.png" type="Texture" id=59]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0035.png" type="Texture" id=60]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0038.png" type="Texture" id=61]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0034.png" type="Texture" id=62]
[ext_resource path="res://asset/title/cat/cat_title/idle/cat_title_idle0048.png" type="Texture" id=63]
[ext_resource path="res://Scene/AnimatedSprite.gd" type="Script" id=64]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0013.png" type="Texture" id=65]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0001.png" type="Texture" id=66]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0025.png" type="Texture" id=67]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0020.png" type="Texture" id=68]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0006.png" type="Texture" id=69]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0033.png" type="Texture" id=70]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0007.png" type="Texture" id=71]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0012.png" type="Texture" id=72]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0009.png" type="Texture" id=73]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0026.png" type="Texture" id=74]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0011.png" type="Texture" id=75]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0028.png" type="Texture" id=76]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0004.png" type="Texture" id=77]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0016.png" type="Texture" id=78]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0005.png" type="Texture" id=79]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0017.png" type="Texture" id=80]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0002.png" type="Texture" id=81]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0003.png" type="Texture" id=82]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0008.png" type="Texture" id=83]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0010.png" type="Texture" id=84]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0014.png" type="Texture" id=85]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0015.png" type="Texture" id=86]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0018.png" type="Texture" id=87]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0021.png" type="Texture" id=88]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0019.png" type="Texture" id=89]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0022.png" type="Texture" id=90]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0023.png" type="Texture" id=91]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0024.png" type="Texture" id=92]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0027.png" type="Texture" id=93]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0029.png" type="Texture" id=94]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0030.png" type="Texture" id=95]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0031.png" type="Texture" id=96]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0032.png" type="Texture" id=97]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0034.png" type="Texture" id=98]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0036.png" type="Texture" id=99]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0037.png" type="Texture" id=100]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0038.png" type="Texture" id=101]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0039.png" type="Texture" id=102]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0041.png" type="Texture" id=103]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0042.png" type="Texture" id=104]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0043.png" type="Texture" id=105]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0044.png" type="Texture" id=106]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0045.png" type="Texture" id=107]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0035.png" type="Texture" id=108]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0040.png" type="Texture" id=109]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0046.png" type="Texture" id=110]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0047.png" type="Texture" id=111]
[ext_resource path="res://asset/title/cat/cat_title/blink/cat_title_idle_blink0048.png" type="Texture" id=112]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 66 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 77 ), ExtResource( 79 ), ExtResource( 69 ), ExtResource( 71 ), ExtResource( 83 ), ExtResource( 73 ), ExtResource( 84 ), ExtResource( 75 ), ExtResource( 72 ), ExtResource( 65 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 78 ), ExtResource( 80 ), ExtResource( 87 ), ExtResource( 89 ), ExtResource( 68 ), ExtResource( 88 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 67 ), ExtResource( 74 ), ExtResource( 93 ), ExtResource( 76 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 70 ), ExtResource( 98 ), ExtResource( 108 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 109 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ) ],
"loop": true,
"name": "blink",
"speed": 24.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 28 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 23 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 21 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 24 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 37 ), ExtResource( 17 ), ExtResource( 40 ), ExtResource( 33 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 32 ), ExtResource( 43 ), ExtResource( 30 ), ExtResource( 19 ), ExtResource( 44 ), ExtResource( 20 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 27 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 22 ), ExtResource( 62 ), ExtResource( 60 ), ExtResource( 59 ), ExtResource( 58 ), ExtResource( 61 ), ExtResource( 49 ), ExtResource( 56 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 57 ), ExtResource( 55 ), ExtResource( 63 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1135, 288 )
scale = Vector2( 0.602273, 0.602273 )
frames = SubResource( 1 )
animation = "idle"
script = ExtResource( 64 )

[node name="Podium" type="Sprite" parent="."]
position = Vector2( 683.5, 596 )
scale = Vector2( 0.709896, 0.7 )
texture = ExtResource( 3 )

[node name="CatHands" type="Sprite" parent="."]
position = Vector2( 1127, 470 )
scale = Vector2( 0.602273, 0.602273 )
texture = ExtResource( 7 )

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 4.0
custom_constants/margin_bottom = 45

[node name="C" type="CenterContainer" parent="M"]
margin_top = 523.0
margin_right = 1366.0
margin_bottom = 723.0
size_flags_vertical = 8

[node name="HB" type="HBoxContainer" parent="M/C"]
margin_left = 123.0
margin_right = 1243.0
margin_bottom = 200.0
custom_constants/separation = 260
alignment = 1

[node name="ExitButton" type="TextureButton" parent="M/C/HB"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="PlayButton" type="TextureButton" parent="M/C/HB"]
margin_left = 460.0
margin_right = 660.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="AboutButton" type="TextureButton" parent="M/C/HB"]
margin_left = 920.0
margin_right = 1120.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="Title" type="Sprite" parent="."]
position = Vector2( 397, -300 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="HoverLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Tween" type="Tween" parent="."]
